# unoah

./: .gitignore  README copy.md  README.md  pyproject.toml  ruff.toml
noah_uno/: __main__.py  game.py
noah_uno/assets/: themes.json
noah_uno/dialogs/: dialog.py  draw4_challenge.py  game_over.py  wild_card_selection.py
noah_uno/panels/: information.py  main_menu.py  panel.py  session.py  statistics.py
noah_uno/utils/: audio.py  card.py  config.py  scores.json  scores.py  util.py
